--- a/prepros-6.config
+++ b/prepros-6.config
@@ -27,12 +27,17 @@
         "assets/css/pages.scss",
         "assets/css/photogallery.scss",
         "assets/css/production.scss",
-        "assets/css/style-new.scss"
+        "assets/css/style-new.scss",
+        "assets/css/product_card.scss",
+        "assets/css/tags.scss",
+        "assets/css/style-text.scss",
+        "assets/css/menu.scss",
+        "assets/css/popup.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
